--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1",
     "sass": "^1.92.1",
     "tailwindcss": "^4.1.13"
   },
